// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Page page create 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1021;"
  >
    <div
      aria-labelledby="pv_id_28_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1022;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_28_header"
        >
          Create a new page
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              for="PageTextField"
            >
              Page Name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component"
              id="PageTextField"
              required="required"
            />
          </div>
           
          <div
            class="p-field"
          >
            <label
              for="PageHiddenField"
            >
              Hide the page
            </label>
             
            <div
              class="p-inputswitch p-component"
              id="PageHiddenField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  role="switch"
                  type="checkbox"
                />
              </div>
               
              <span
                class="p-inputswitch-slider"
              />
            </div>
          </div>
           
          <div
            class="lck-form-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button-text p-button p-component"
              disabled="disabled"
              type="button"
            >
              <span
                class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Please wait
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/visualize/Page page edit 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1022;"
  >
    <div
      aria-labelledby="pv_id_29_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1023;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_29_header"
        >
          Edit a page
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        <form
          class="p-fluid"
        >
          <div
            class="p-field"
          >
            <label
              for="PageTextField"
            >
              Page Name
            </label>
             
            <input
              autofocus="autofocus"
              class="p-inputtext p-component p-filled"
              id="PageTextField"
              required="required"
            />
          </div>
           
          <div
            class="p-field"
          >
            <label
              for="PageHiddenField"
            >
              Hide the page
            </label>
             
            <div
              class="p-inputswitch p-component p-inputswitch-checked"
              id="PageHiddenField"
            >
              <div
                class="p-hidden-accessible"
              >
                <input
                  aria-checked="true"
                  role="switch"
                  type="checkbox"
                />
              </div>
               
              <span
                class="p-inputswitch-slider"
              />
            </div>
          </div>
           
          <div
            class="lck-form-footer"
          >
            <button
              class="p-button-text p-button-secondary p-button p-component"
              type="button"
            >
              <span
                class="pi pi-times p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Cancel
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
             
            <button
              class="p-button-text p-button p-component"
              disabled="disabled"
              type="button"
            >
              <span
                class="pi pi-spin pi-spinner p-button-icon p-button-icon-left"
              />
               
              <span
                class="p-button-label"
              >
                Please wait
              </span>
               
              <!---->
              <span
                class="p-ink"
              />
            </button>
          </div>
        </form>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
